// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Filter Async Filter 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-2 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.25rem;
}

.emotion-2:hover>*,
.emotion-2:active>* {
  background-color: #d1d9e8;
  border: solid 1px transparent;
  box-shadow: none;
}

.emotion-3 {
  z-index: 0;
  position: relative;
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  box-shadow: none;
  color: #000;
  background-color: #F3F5F9;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-5 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-6 {
  font-weight: 400;
}

.emotion-6 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #000;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-8 path {
  fill: #000;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    role="button"
  >
    <div
      className="emotion-1"
    >
      <button
        className="emotion-2"
        data-testid="filter"
        disabled={false}
        onClick={[Function]}
      >
        <div
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            <span
              className="emotion-5"
            >
              <span
                className="emotion-6"
              >
                Async Label
                :
                <span>
                  Default value
                </span>
              </span>
            </span>
            <span
              className="emotion-7"
              onClick={[Function]}
            >
              <span
                className="emotion-8"
              />
            </span>
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Async Filter with min characters 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-2 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.25rem;
}

.emotion-2:hover>*,
.emotion-2:active>* {
  background-color: #d1d9e8;
  border: solid 1px transparent;
  box-shadow: none;
}

.emotion-3 {
  z-index: 0;
  position: relative;
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  box-shadow: none;
  color: #000;
  background-color: #F3F5F9;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-5 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-6 {
  font-weight: 400;
}

.emotion-6 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #000;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-8 path {
  fill: #000;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    role="button"
  >
    <div
      className="emotion-1"
    >
      <button
        className="emotion-2"
        data-testid="filter"
        disabled={false}
        onClick={[Function]}
      >
        <div
          className="emotion-3"
        >
          <span
            className="emotion-4"
          >
            <span
              className="emotion-5"
            >
              <span
                className="emotion-6"
              >
                Async Label
                :
                <span>
                  Default value
                </span>
              </span>
            </span>
            <span
              className="emotion-7"
              onClick={[Function]}
            >
              <span
                className="emotion-8"
              />
            </span>
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Dynamic Filter Props 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-2 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.25rem;
}

.emotion-2:hover>*,
.emotion-2:active>* {
  background-color: #d1d9e8;
  border: solid 1px transparent;
  box-shadow: none;
}

.emotion-3 {
  z-index: 0;
  position: relative;
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  box-shadow: none;
  color: #000;
  background-color: #F3F5F9;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-5 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-6 {
  font-weight: 400;
}

.emotion-6 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-7 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-8 {
  fill: #000;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-8 path {
  fill: #000;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div>
    <div
      role="button"
    >
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="filter"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="emotion-3"
          >
            <span
              className="emotion-4"
            >
              <span
                className="emotion-5"
              >
                <span
                  className="emotion-6"
                >
                  you can change me
                  :
                  <span>
                    Peach
                  </span>
                </span>
              </span>
              <span
                className="emotion-7"
                onClick={[Function]}
              >
                <span
                  className="emotion-8"
                />
              </span>
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Filter with colors 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-3 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.25rem;
}

.emotion-3:hover>*,
.emotion-3:active>* {
  background-color: #c399ff;
  border: solid 1px transparent;
  box-shadow: none;
}

.emotion-4 {
  z-index: 0;
  position: relative;
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  box-shadow: none;
  color: #000;
  background-color: #e1ccff;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-6 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-7 {
  font-weight: 400;
}

.emotion-7 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #000;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-9 path {
  fill: #000;
}

.emotion-11 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.25rem;
}

.emotion-11:hover>*,
.emotion-11:active>* {
  background-color: #d20000;
  border: solid 1px #d20000;
  box-shadow: none;
}

.emotion-12 {
  z-index: 0;
  position: relative;
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  box-shadow: none;
  color: #fff;
  background-color: #9f0000;
  border: solid 1px #cfcfcf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-17 {
  fill: #fff;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-17 path {
  fill: #fff;
}

.emotion-19 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.25rem;
}

.emotion-19:hover>*,
.emotion-19:active>* {
  background-color: #5d5d5d;
  border: solid 1px transparent;
  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.15);
}

.emotion-20 {
  z-index: 0;
  position: relative;
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.15);
  color: #fff;
  background-color: #767676;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-27 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.25rem;
}

.emotion-27:hover>*,
.emotion-27:active>* {
  background-color: #ea9cc2;
  border: solid 1px transparent;
  box-shadow: none;
}

.emotion-28 {
  z-index: 0;
  position: relative;
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  box-shadow: none;
  color: #000;
  background-color: transparent;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label
                      :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-11"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-12"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label
                      :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-17"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-19"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-20"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label
                      :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-17"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-27"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-28"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label
                      :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Filter with style types 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-3 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.25rem;
}

.emotion-3:hover>*,
.emotion-3:active>* {
  background-color: #d1d9e8;
  border: solid 1px transparent;
  box-shadow: none;
}

.emotion-4 {
  z-index: 0;
  position: relative;
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  box-shadow: none;
  color: #000;
  background-color: #F3F5F9;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-6 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-7 {
  font-weight: 400;
}

.emotion-7 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #000;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-9 path {
  fill: #000;
}

.emotion-11 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.25rem;
}

.emotion-11:hover>*,
.emotion-11:active>* {
  background-color: #d1d9e8;
  border: solid 1px #d1d9e8;
  box-shadow: none;
}

.emotion-12 {
  z-index: 0;
  position: relative;
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  box-shadow: none;
  color: #000;
  background-color: #F3F5F9;
  border: solid 1px #cfcfcf;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-19 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.25rem;
}

.emotion-19:hover>*,
.emotion-19:active>* {
  background-color: #d1d9e8;
  border: solid 1px transparent;
  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.15);
}

.emotion-20 {
  z-index: 0;
  position: relative;
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.15);
  color: #000;
  background-color: #F3F5F9;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-28 {
  z-index: 0;
  position: relative;
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  box-shadow: none;
  color: #000;
  background-color: transparent;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-36 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.25rem;
}

.emotion-36:hover>*,
.emotion-36:active>* {
  background-color: #c399ff;
  border: solid 1px transparent;
  box-shadow: none;
}

.emotion-37 {
  z-index: 0;
  position: relative;
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  box-shadow: none;
  color: #000;
  background-color: #e1ccff;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 0.25rem 0 1rem;
  border-radius: 1.5rem;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-43 {
  z-index: 0;
  position: relative;
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  box-shadow: none;
  color: #000;
  background-color: #e1ccff;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 1rem;
  margin-left: 0.0625rem;
  border-top-right-radius: 1.5rem;
  border-bottom-right-radius: 1.5rem;
}

.emotion-45 {
  fill: #676767;
  width: 1.25rem;
  height: 1.25rem;
}

.emotion-45 path {
  fill: #676767;
}

.emotion-47 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.25rem;
}

.emotion-47:hover>*,
.emotion-47:active>* {
  background-color: #c399ff;
  border: solid 1px #c399ff;
  box-shadow: none;
}

.emotion-54 {
  z-index: 0;
  position: relative;
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  box-shadow: none;
  color: #000;
  background-color: #e1ccff;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 1rem;
  border-top-right-radius: 1.5rem;
  border-bottom-right-radius: 1.5rem;
}

.emotion-58 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.25rem;
}

.emotion-58:hover>*,
.emotion-58:active>* {
  background-color: #c399ff;
  border: solid 1px transparent;
  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.15);
}

.emotion-59 {
  z-index: 0;
  position: relative;
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.15);
  color: #000;
  background-color: #e1ccff;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 0.25rem 0 1rem;
  border-radius: 1.5rem;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-65 {
  z-index: 0;
  position: relative;
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.15);
  color: #000;
  background-color: #e1ccff;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 1rem;
  margin-left: 0.0625rem;
  border-top-right-radius: 1.5rem;
  border-bottom-right-radius: 1.5rem;
}

.emotion-70 {
  z-index: 0;
  position: relative;
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  box-shadow: none;
  color: #000;
  background-color: transparent;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 0.25rem 0 1rem;
  border-radius: 1.5rem;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-76 {
  z-index: 0;
  position: relative;
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  box-shadow: none;
  color: #000;
  background-color: transparent;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 1rem;
  margin-left: 0.0625rem;
  border-top-right-radius: 1.5rem;
  border-bottom-right-radius: 1.5rem;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <h2>
    Preset
  </h2>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label
                      :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-11"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-12"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label
                      :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-19"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-20"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label
                      :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-28"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label
                      :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <h2>
    Added
  </h2>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-36"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-37"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label
                      :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </div>
              <div
                className="emotion-43"
              >
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-45"
                  />
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-47"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-37"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label
                      :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </div>
              <div
                className="emotion-54"
              >
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-45"
                  />
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-58"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-59"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label
                      :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </div>
              <div
                className="emotion-65"
              >
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-45"
                  />
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-36"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-70"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label
                      :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </div>
              <div
                className="emotion-76"
              >
                <span
                  className="emotion-8"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-45"
                  />
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Searchable Filter 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-3 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 2.25rem;
}

.emotion-3:hover>*,
.emotion-3:active>* {
  background-color: #d1d9e8;
  border: solid 1px transparent;
  box-shadow: none;
}

.emotion-4 {
  z-index: 0;
  position: relative;
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  box-shadow: none;
  color: #000;
  background-color: #F3F5F9;
  border: solid 1px transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

.emotion-6 {
  margin-left: 0;
  margin-right: 0.5rem;
}

.emotion-7 {
  font-weight: 400;
}

.emotion-7 span {
  margin-left: 0.25rem;
  font-weight: 700;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #000;
  width: 0.375rem;
  height: 0.375rem;
}

.emotion-9 path {
  fill: #000;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          role="button"
        >
          <div
            className="emotion-2"
          >
            <button
              className="emotion-3"
              data-testid="filter"
              disabled={false}
              onClick={[Function]}
            >
              <div
                className="emotion-4"
              >
                <span
                  className="emotion-5"
                >
                  <span
                    className="emotion-6"
                  >
                    <span
                      className="emotion-7"
                    >
                      Label
                      :
                      <span>
                        Default value
                      </span>
                    </span>
                  </span>
                  <span
                    className="emotion-8"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-9"
                    />
                  </span>
                </span>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
